--- a/public/about.html
+++ b/public/about.html
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>about页面</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
- 
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
+<meta charset="utf-8">
+<title>数字滚动动画插件</title>
+	<script src="js/jquery.js"></script> 
+	<script src="js/jquery.leoTextAnimate.js"></script> 
+	<style>
+	.number2,.number3{color:#C40000;font-size:60px;font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif"}
+	</style>
 </head>
-<body class="bg-body">
-  
-  我是about页面
 
+<body>
+
+	<div class="number">6,789.00</div>
+	<div class="number2">12,084.00</div>
+	
+	<div class="number3" style="margin-top: 50px">155,568.99</div>
+	<script type="text/javascript">
+		$('.number').leoTextAnimate({delay:1000,autorun:true,fixed:[',',':','.'],start:'-'});
+		$('.number2').leoTextAnimate({fixed:[',',':','.'],start:'-'});
+		
+		$('.number3').leoTextAnimate({delay:3000,autorun:true,fixed:[',',':','.'],start:'-'});
+	</script>
 </body>
 </html>
