--- a/public/monitor.html
+++ b/public/monitor.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>机房监控中心</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="fonts/iconfont.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -30,7 +30,7 @@
     <div class="item-panel-right">
         <p>活跃数/总数</p>
         <div class="color-yel" id="oneBlock"><div><span class="number" id="activeNum">2650</span>/<span class="number" id="allNum">86654</span></div></div>
-        <span class="text-tip" style="left:248px;">在线率:<em id="online">92.2%</em></span>
+        <span class="text-tip" style="left:230px;">在线率:<em id="online">92.2%</em></span>
     </div>
   </div>
   <div class="item-panel mcenter clear">
@@ -48,7 +48,7 @@
     </div>
     <div class="item-panel-right">
         <p>故障总数/故障率</p>
-        <div class="color-org"><span class="number" id="badall">2650</span>/<span class="number" id="badvol">1.26</span>%</div>
+        <div class="color-org"><span class="number" id="badall">2650</span>/<span class="number" id="badvol">1.26</span><em class="numberpei">%</em></div>
     </div>
   </div>
  
@@ -65,7 +65,7 @@
     <div class="data-model model-right right">
       <div class="model-title"><span class="icon iconfont">&#xe635;</span>矿机实时数据</div>
       <div class="model-body">
-        <table>
+        <table id="tableId">
           <thead>
             <th>IP</th>
             <th>告警类型</th>
