纯静态实现动态刷新

--- a/public/monitor.html
+++ b/public/monitor.html
@@ -58,7 +58,7 @@
     <div class="data-model model-left left">
       <div class="model-title"><span class="icon iconfont">&#xeb95;</span>告警类型统计</div>
       <div id="echarts01title" class="echart-tips"></div>
-      <div id="echarts01" style="width:270px;height:280px;top:40px;"></div>
+      <div id="echarts01" style="width:270px;height:300px;"></div>
     </div>
 
     <!-- 2-2-2、异常设备表格 -->
@@ -72,44 +72,7 @@
             <th>告警时间</th>
             <th>消警时间</th>
           </thead>
-          <tbody class="fs14" id="modelData">
-            <tr class="tr-error">
-              <td>192.168.80.201</td>
-              <td>算力异常</td>
-              <td>05-29 15:54:35</td>
-              <td>--</td>
-            </tr>
-            <tr class="tr-ok">
-              <td>192.168.80.69</td>
-              <td>算力异常恢复</td>
-              <td>05-29 15:54:35</td>
-              <td>05-29 15:54:35</td>
-            </tr>
-            <tr class="tr-error">
-              <td>192.168.80.201</td>
-              <td>算力异常</td>
-              <td>05-29 15:54:35</td>
-              <td>--</td>
-            </tr>
-            <tr class="tr-ok">
-              <td>192.168.80.201</td>
-              <td>算力异常</td>
-              <td>05-29 15:54:35</td>
-              <td>--</td>
-            </tr>
-            <tr class="tr-error">
-              <td>192.168.80.201</td>
-              <td>算力异常</td>
-              <td>05-29 15:54:35</td>
-              <td>05-29 15:54:35</td>
-            </tr>
-            <tr class="tr-ok">
-              <td>192.168.80.201</td>
-              <td>算力异常</td>
-              <td>05-29 15:54:35</td>
-              <td>05-29 15:54:35</td>
-            </tr>
-          </tbody>
+          <tbody class="fs14" id="modelData"></tbody>
         </table>
       </div>
     </div>
