--- a/public/404.html
+++ b/public/404.html
@@ -1,191 +1,306 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
 <html>
 <head>
-<title>table内容连续滚动</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css">
-* {padding: 0; margin: 0};
-td {height: 28px;};
-</style>
+	<title>滚动信息</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<style type="text/css">
+		body {
+			font-size: 12px;
+			background-color: #FFF;
+			overflow: hidden;
+		}
+
+		td {
+			font-size: 12px;
+		}
+
+		.titletd td {
+			background-color: #EFEFEF;
+			padding: 2px;
+			text-align: center;
+		}
+
+		.datatd td {
+			background-color: #FFFFFF;
+			height: 18px;
+			padding-left: 2px;
+		}
+
+		.td1 {
+			width: 80px;
+		}
+
+		.td2 {
+			width: 85px;
+		}
+
+		.td3 {
+			width: 100px;
+		}
+
+		.td4 {
+			width: 70px;
+		}
+
+		.td5 {
+			width: 60px;
+		}
+
+		.td6 {
+			width: 85px;
+		}
+
+		.td7 {
+			width: 62px;
+		}
+	</style>
 </head>
-<body bgcolor="#FFFFFF">
-<div style="padding-top: 100px;">
-<table width="600" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="4FBFF9">
-	<tr>
-		<td width="120" align="center">业务流水号</td>
-		<td width="130" align="center">业务名称</td>
-		<td width="150" align="center">申请企业名称</td>
-		<td width="100" align="center">申报日期</td>
-		<td width="100" align="center">办理状态</td>
-	</tr>
-</table>
-</div>
-<div id="demo" style="overflow: hidden; height: 240;">
-	<div id="demo1">
-		<table width="600" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="4FBFF9">
-			<tr>
-				<td width="120" align="center">201404020001</td>
-				<td width="130">测试业务</td>
-				<td width="150">申请企业名称</td>
-				<td width="100" align="center">2014-03-13</td>
-				<td width="100" align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020002</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020003</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020004</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020005</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020006</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020007</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020008</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020009</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020010</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020011</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020012</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020013</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020014</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020015</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020016</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020017</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020018</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020019</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-			<tr>
-				<td align="center">201404020020</td>
-				<td>测试业务</td>
-				<td>申请企业名称</td>
-				<td align="center">2014-03-13</td>
-				<td align="center">在办</td>
-			</tr>
-		</table>
-	</div>
-	<div id="demo2"></div>
-</div>
-<script type="text/javascript">
-var speed = 50;
-demo2.innerHTML = demo1.innerHTML;
-function Marquee() {
-	if (demo2.offsetTop - demo.scrollTop <= 0) {
-		demo.scrollTop -= demo1.offsetHeight;
-	} else {
-		demo.scrollTop++;
-	}
-}
-var MyMar = setInterval(Marquee, speed);
- 
-demo.onmouseover = function() {
-	clearInterval(MyMar);
-}
- 
-demo.onmouseout = function() {
-	MyMar = setInterval(Marquee, speed);
-}
-</script>
+
+<body>
+	<table border="0" width="100%" cellspacing="0" cellpadding="0">
+		<tr>
+			<td width="100%">
+				<table width="550" border="0" cellpadding="0" cellspacing="1" bgcolor="#cccccc">
+					<tr class="titletd">
+						<td nowrap class="td1">产品名称</td>
+						<td nowrap class="td2">规格</td>
+						<td nowrap class="td3">产地</td>
+						<td nowrap class="td4">价格</td>
+						<td nowrap class="td5">单位</td>
+						<td nowrap class="td6">企业名称</td>
+						<td nowrap class="td7">日期</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td width="100%">
+				<div id="A1">
+					<div id="A2">
+						<table width="550" border="0" cellpadding="0" cellspacing="1" bgcolor="#cccccc" style="margin-top:-1px;">
+							<tbody class="datatd">
+								<tr>
+									<td nowrap class="td1">白银</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">3,465</td>
+									<td nowrap class="td5">元/公斤</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">锑</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">47,000</td>
+									<td nowrap class="td5">元/公斤</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解锰</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">12,700</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">铜升水</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">600</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">铜升水</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">300</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解铜</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">68,490</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解铝</td>
+									<td nowrap class="td2">A00</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">19,540</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解铅</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">12,000</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解锌</td>
+									<td nowrap class="td2">0#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">29,650</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">电解锌</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">27,900</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">无氧铜丝</td>
+									<td nowrap class="td2">Φ3mm</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">69,400</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">镍</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">315,000</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">锡</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">78,000</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">钴</td>
+									<td nowrap class="td2">1#</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">400,000</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">漆包线</td>
+									<td nowrap class="td2">0.1-2.5mm</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">75,540</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">MB超细镍粉</td>
+									<td nowrap class="td2">150～1000</td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">550</td>
+									<td nowrap class="td5">元/公斤</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">砷铜合金</td>
+									<td nowrap class="td2"></td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">68,500</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-25</td>
+								</tr>
+								<tr>
+									<td nowrap class="td1">砷铜合金</td>
+									<td nowrap class="td2"></td>
+									<td nowrap class="td3">#</td>
+									<td nowrap class="td4" align="right">68,500</td>
+									<td nowrap class="td5">元/吨</td>
+									<td nowrap class="td6">长江现货</td>
+									<td nowrap class="td7">2006-8-24</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</td>
+		</tr>
+	</table>
+	<SCRIPT language=JavaScript>
+
+		function _InitScroll(_S1, _S2, _W, _H, _T) {
+			"var marqueesHeight" + _S1 + "=" + _H + ";
+			"var stopscroll" + _S1 + "=false;
+			"var scrollElem" + _S1 + "=document.getElementById('" + _S1 + "');
+			with(scrollElem" + _S1 + "){
+				style.width=" + _W + ";
+				style.height=marqueesHeight" + _S1 + ";
+				style.overflow='hidden';noWrap=true;
+			}
+			scrollElem" + _S1 + ".onmouseover=new Function('stopscroll" + _S1 + "=true');
+			scrollElem" + _S1 + ".onmouseout=new Function('stopscroll" + _S1 + "=false');
+			var preTop" + _S1 + "=0; 
+			var currentTop" + _S1 + "=0; 
+			var stoptime" + _S1 + "=0;
+			var leftElem" + _S2 + "=document.getElementById('" + _S2 + "');
+			scrollElem" + _S1 + ".appendChild(leftElem" + _S2 + ".cloneNode(true));
+			setTimeout('init_srolltext" + _S1 + "()'," + _T + ");
+			function init_srolltext" + _S1 + "(){
+				scrollElem" + _S1 + ".scrollTop=0;setInterval('scrollUp" + _S1 + "()',50);
+			}
+			function scrollUp" + _S1 + "(){
+				if(stopscroll" + _S1 + "){return;}
+				currentTop" + _S1 + "+=1;
+				if(currentTop" + _S1 + "==(marqueesHeight" + _S1 + "+1)) {
+					stoptime" + _S1 + "+=1;
+					currentTop" + _S1 + "-=1;
+					if(stoptime" + _S1 + "==" + _T / 50 + ") {
+						currentTop" + _S1 + "=0;stoptime" + _S1 + "=0;
+					}
+				}else{
+					preTop" + _S1 + "=scrollElem" + _S1 + ".scrollTop;
+					scrollElem" + _S1 + ".scrollTop +=1;
+					if(preTop" + _S1 + "==scrollElem" + _S1 + ".scrollTop){
+						scrollElem" + _S1 + ".scrollTop=0;
+						scrollElem" + _S1 + ".scrollTop +=1;
+					}
+				}
+			}";
+			
+		}
+		eval(_InitScroll("A1", "A2", 550, 19 * 8, 3000));
+    /*
+     A1,A2或B1,B2是滚动内容区域外的两个DIV的ID
+     如
+     <div id="B1">
+     <div id="B2">
+     _W为滚动内容的宽度
+     _H为滚动内容的高度,必须为单元格高度的整数倍，这里每个单元格是19px高
+     _T为滚动后每次停留时间
+     2006-8-25
+     */
+    //-->
+	</SCRIPT>
 </body>
 </html>
