--- a/public/indexVue.html
+++ b/public/indexVue.html
@@ -33,8 +33,9 @@
   </section>
 
   <script>
-    Axios.defaults.baseURL = '/api'
-    Axios.defaults.headers.post['Content-Type'] = 'application/json';
+    // axios中文手册：https://www.kancloud.cn/yunye/axios/234845
+
+
     var vm = new Vue({
       el: "siteBox",
       data: {
@@ -44,6 +45,14 @@
         axios({
           method: 'get',
           url: 'http://124.160.26.251:8090/minerRoom/querySiteList',
+          proxy: {
+            host: '192.168.80.82',
+            port: 80,
+            auth: {
+              username: 'mikeymike',
+              password: 'rapunz3l'
+            }
+          }
         }).then(function (data) {
           console.log(data)
         });
