--- a/public/indexVue.html
+++ b/public/indexVue.html
@@ -13,7 +13,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <script src="js/vue.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+  <script src="js/axios.js"></script>
 </head>
 
 <body class="bg-body">
