--- a/public/monitor.html
+++ b/public/monitor.html
@@ -17,7 +17,7 @@
 <body class="bg-body">
 <!-- 一：头部 矿场监控中心 -->
 <div class="nav-top">
-  <div class="nav-center"><h2 class="h2">机房监控中心</h2><p>Ebang mine data monitoring center</p></div>
+  <div class="nav-center"><h2 class="h2" id="siteName1">机房监控中心</h2><p>Ebang mine data monitoring center</p></div>
 </div>
 <!-- 二：内容 汇总数据 和 详细数据 -->
 <section class="section">
@@ -72,7 +72,7 @@
             <th>告警时间</th>
             <th>消警时间</th>
           </thead>
-          <tbody class="fs14" id="modelData"></tbody>
+          <tbody class="fs14" id="modelData"><tr class="firstno"><td>--</td><td>--</td><td>--</td><td>--</td></tr></tbody>
         </table>
       </div>
     </div>
